# Prototype

./: .gitignore  README.md  docker-compose.yml  heroku.yml  main.py
.github/workflows/: actions.yml
backend/: Dockerfile  main.py  pyproject.toml  requirements.txt  run.sh
backend/app/: __init__.py  init_db.py  schemas.py
backend/app/api/: chat.py  connection_manager.py  dependencies.py  game.py  game_manager.py  router.py  scrabble.py  user.py
backend/app/core/: config.py
backend/app/database/: init_db.py  session.py
backend/app/models/: README.md  __init__.py  base.py  dictionary.py  dictionary_mapping.py  themes.py  users.py  words.py
backend/characterconnect/: init_db.py  models.py  schemas.py
backend/characterconnect/api/: connection_manager.py  dependencies.py  game.py  game_manager.py  router.py  scrabble.py  user.py
backend/characterconnect/core/: config.py
backend/characterconnect/database/: init_db.py  session.py
backend/characterconnect/game/: tiles.py
backend/tests/: README.md  data.csv  test_scrabble_algorithm.py
chatBox/: server.py
debug/: containers.py
debug/data/: README.md
frontend/: .gitignore  Dockerfile  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.vue  constants.js  main.js  (+1 more)
landing_page/: Blog.html  Contact.html  FAQ.html  GameRules.html  Post1.html  Post2.html  Report.jfif  Support.html  Support2.jpg.jfif  Terms of Service.html  about-us.html  board.css  board.html  bottomfooter.php  footer.php  header.html  index.html  report1.jfif  scripts.js  style.css
utils/: containers.py
(+49 files in other folders)
