[tool.poetry]
name = "backend"
version = "0.1.0"
description = "CharacterConnect API code"
authors = ["Harry Lees <harry.lees@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.0"
SQLAlchemy = "^1.4.32"
passlib = "^1.7.4"
websockets = "^10.2"
psycopg2 = "^2.9.3"
python-jose = "^3.3.0"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
uvicorn = "^0.17.5"
pytest = "^7.0.1"
flake8 = "^4.0.1"
mypy = "^0.931"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
